<resources>
    <string name="app_name">Puzzle 2248</string>

    <string name="play">Play</string>
    <!--<string name="normal">Normal ( 4 x 5 )</string>-->
    <!--<string name="hard">Hard ( 5 x 5 )</string>-->
    <!--<string name="insane">Insane ( 5 x 6 )</string>-->
    <string name="rate_app">Rate this app</string>
    <string name="share">Share</string>
    <string name="best_score">Best Score</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>

    <string name="share_msg">"Share an app for you."</string>
    <string name="score">Score</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="click_to_restart">Click to Restart</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play Again ?</string>
    <string name="quit_msg">Quit the Game ?</string>
</resources>
