<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_fragment_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="100dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="#fe918c"
        android:textSize="32sp"/>

    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/play"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/play"
            android:textSize="28sp"/>

    </LinearLayout>


    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rate_app"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_rate"/>

        <ImageButton
            android:id="@+id/share"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share"/>

        <ImageButton
            android:id="@+id/best_score"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/best_score"
            android:src="@drawable/ic_best"/>

        <ImageButton
            android:id="@+id/settings"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"/>

    </LinearLayout>


</LinearLayout>
